// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestDatabaseConnectButton rendering should render basic button with correct text 1`] = `
<div>
  <div
    class="ant-space ant-space-vertical"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 8px;"
    >
      <button
        class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
        type="button"
      >
        <span>
          测试数据源连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    />
  </div>
</div>
`;

exports[`TestDatabaseConnectButton uncontrolled mode behavior should show error message when connection test fails 1`] = `
<div>
  <div
    class="ant-space ant-space-vertical"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 8px;"
    >
      <button
        class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
        type="button"
      >
        <span>
          测试数据源连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-start css-1nec0wd"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              class="custom-icon"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14.667A6.666 6.666 0 1 1 8 1.334a6.666 6.666 0 0 1 0 13.333m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m0-6.276 1.885-1.886.944.944L8.943 8l1.886 1.885-.944.944L8 8.943l-1.885 1.886-.944-.944L7.057 8 5.171 6.115l.944-.944z"
                fill="#F66074"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-danger"
          >
            <pre>
              disable reason
            </pre>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TestDatabaseConnectButton uncontrolled mode behavior should show success message when connection test succeeds 1`] = `
<div>
  <div
    class="ant-space ant-space-vertical"
  >
    <div
      class="ant-space-item"
      style="margin-bottom: 8px;"
    >
      <button
        class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
        type="button"
      >
        <span>
          测试数据源连通性
        </span>
      </button>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-start css-1nec0wd"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <span
            class="css-u3jcp4"
          >
            <svg
              class="custom-icon"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14.667A6.667 6.667 0 1 1 8 1.333a6.667 6.667 0 0 1 0 13.334m0-1.334A5.333 5.333 0 1 0 8 2.667a5.333 5.333 0 0 0 0 10.666m-.665-2.666L4.507 7.838l.942-.943 1.886 1.886 3.771-3.771.943.943z"
                fill="#1CB889"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-space-item"
        >
          <span
            class="ant-typography ant-typography-success"
          >
            <pre>
              数据源连通性测试成功
            </pre>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
